# lazy-github

./: .gitignore  LICENSE  README  README.md  default.nix  flake.nix  gh-lazy  lazy-github.nix  lint.sh  lock.x86_64-linux.json  pyproject.toml  requirements.txt  run_checks.sh  start.sh  wireframe.txt
.github/workflows/: code-checks.yaml  publish.yaml
lazy_github/: __main__.py  cli.py  ui.py  version.py
lazy_github/lib/: bindings.py  cache.py  config.py  constants.py  context.py  decorators.py  git_cli.py  github.py  github_cli.py  logging.py  messages.py  string_utils.py  utils.py
lazy_github/lib/github/: actions.py  auth.py  branches.py  checks.py  client.py  constants.py  issues.py  notifications.py  pull_requests.py  repositories.py  workflows.py
lazy_github/lib/github/backends/: cli.py  hishel.py  http.py  offline.py  protocol.py
lazy_github/lib/github_v2/: auth.py  client.py  issues.py  pull_requests.py  repositories.py
lazy_github/models/: core.py  github.py
lazy_github/ui/: app.py  auth.py  view.py
lazy_github/ui/screens/: auth.py  edit_issue.py  lookup_pull_request.py  lookup_repository.py  new_comment.py  new_issue.py  new_pull_request.py  notifications.py  primary.py  settings.py  trigger_workflow.py
lazy_github/ui/widgets/: actions.py  command_log.py  common.py  conversations.py  info.py  issues.py  pull_requests.py  repositories.py  workflows.py
