[project]
name = "lazy-github"
description = "A terminal UI for interacting with Github"
readme = "README.md"
version = "0.1"
authors = [
	{ name = "Chris Chapline", email = "gizmo385@users.noreply.github.com" },
]
maintainers = [
	{ name = "Chris Chapline", email = "gizmo385@users.noreply.github.com" },
]
license = { file = "LICENSE"}

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.11"
dependencies = [
	"PyGithub",
	"httpx",
	"hishel",
	"pydantic",
	"textual",
	"textual-dev",
]

[project.scripts]
lazy-github = "lazy_github.__main__:main"

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]

line-length = 120

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.377",
    "ruff>=0.6.1",
]
